fix overflow issue in the parameters table.

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
@@ -16,6 +16,7 @@ i[data-tribe-editable-text], i[data-tribe-editable-number]
 i[data-tribe-editable-text], i[data-tribe-editable-number]
   > div
     max-width: 100%
+    overflow: hidden
     > span
       white-space: nowrap
       &.empty
